--- a/laborbericht.tex
+++ b/laborbericht.tex
@@ -363,7 +363,7 @@ Oszilloskop: Keysight DSOX1102A Digital Storage Oscilloscope \\
   \end{minipage}
   \hfill
   \begin{minipage}[b]{0.49\textwidth}
-    \includegraphics[width=\textwidth]{example-image-b}
+    \includegraphics[width=\textwidth]{schaltplan_versuch_2.png}
     \caption{Schaltung}
     \label{abb:schaltung2}
   \end{minipage}
