added schaltplan versuch 3

--- a/laborbericht.tex
+++ b/laborbericht.tex
@@ -457,7 +457,7 @@ Oszilloskop: Keysight DSOX1102A Digital Storage Oscilloscope \\
   \end{minipage}
   \hfill
   \begin{minipage}[b]{0.49\textwidth}
-    \includegraphics[width=\textwidth]{example-image-b}
+    \includegraphics[width=\textwidth]{schaltplan_versuch_3.png}
     \caption{Schaltung}
     \label{abb:schaltung3}
   \end{minipage}
@@ -512,7 +512,7 @@ Dabei fällt auf, dass es bei hohen Frequenzen am Ausgang immer schwerer wird ve
 
 \begin{figure}%[h]
   \centering
-  \begin{minipage}[b]{0.49\textwidth} % TODO Versuchsaufbau hinzufügen
+  \begin{minipage}[b]{0.49\textwidth}
     \includegraphics[width=\textwidth]{scope_49.png}
     \caption{Sinus Signal}
     \label{abb:aliasSin}
