--- a/laborbericht.tex
+++ b/laborbericht.tex
@@ -451,7 +451,7 @@ Oszilloskop: Keysight DSOX1102A Digital Storage Oscilloscope \\
 \begin{figure}%[h]
   \centering
   \begin{minipage}[b]{0.49\textwidth} % TODO Versuchsaufbau hinzufügen
-    \includegraphics[width=\textwidth]{example-image-a}
+    \includegraphics[width=\textwidth]{bild_versuch_3.jpg}
     \caption{Versuchsaufbau}
     \label{abb:aufbau3}
   \end{minipage}
