Datum auf Titelseite hinzugefügt

--- a/laborbericht.tex
+++ b/laborbericht.tex
@@ -99,7 +99,8 @@
     {\large Studiengang \Studiengang}\\
     {\large an der Dualen Hochschule Baden-Württemberg\\ Stuttgart}\\[2cm]
     {\large von}\\
-    {\large\bfseries \@author}
+    {\large\bfseries \@author}\\ [1cm]
+    {\large 27. + 28.09.2021}
     \vfill
   \end{center}
 \end{titlepage}
